# hs_code_web_project_final

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py
backend/app/api/v1/: __init__.py  documents.py  health.py  sync.py
backend/app/crawler/: customs_client.py  download_manager.py  scheduler.py
backend/app/db/: __init__.py  base.py  models.py
backend/app/schemas/: document.py
backend/app/services/: ai_router.py  pdf_extractor.py  postprocessor.py  repository.py
backend/tests/: test_repository.py  test_settings.py
docs/: ARCHITECTURE.md  ROADMAP.md
frontend/: Dockerfile  next.config.mjs  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
frontend/tests/: api.test.ts
infrastructure/: docker-compose.yml  run_tests.ps1
