[project]
name = "hs-code-backend"
version = "0.1.0"
description = "Dịch vụ backend thu thập và tra cứu HS code Việt Nam"
readme = "README.md"
authors = [{ name = "HS Code Platform" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy[asyncio]>=2.0.29",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.1",
  "pdfplumber>=0.11.1",
  "pytesseract>=0.3.10",
  "pillow>=10.3.0",
  "tenacity>=8.2.3",
  "structlog>=24.1.0",
  "apscheduler>=3.10.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "httpx[http2]>=0.27.0",
  "ruff>=0.5.0",
  "aiosqlite>=0.20.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
